force-app/main/default/objects/Term_Quote__c/Term_Quote__c.object-meta.xml
<CustomObject>
    <description>Junction object of SBQQ__Quote__c and SBQQ__QuoteTerm__c usied to generate terms for specific quote</description>
    <label>Term Quote</label>
    <nameField>
        <displayFormat>TQ-{000000}</displayFormat>
        <label>Term Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>