force-app/main/default/objects/Term_Quote__c/fields/Print_Order__c.field-meta.xml
<CustomField>
    <fullName>Print_Order__c</fullName>
    <label>Print Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>