force-app/main/default/objects/Term_Quote__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Term Quotes</relationshipLabel>
    <relationshipName>Term_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>