force-app/main/default/objects/Term_Quote__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term</label>
    <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
    <relationshipLabel>Term Quotes</relationshipLabel>
    <relationshipName>Term_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>