force-app/main/default/objects/Term_Quote__c/fields/Validator_Modified__c.field-meta.xml
<CustomField>
    <fullName>Validator_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Developed as a part of story BIZ-49529.This checkbox has been created to identify the term updated by validator.</description>
    <label>Validator Modified</label>
    <type>Checkbox</type>
</CustomField>